# Systemy_Operacyjne_Projekt

./: CMakeLists.txt  RAPORT PROJEKT SO.docx  Wizualizacja_procesow.py  czas.c  czas.h  dyrektor.c  dyrektor.h  kolejka.c  kolejka.h  lekarz.c  lekarz.h  main.c  pacjent  pacjent.c  pacjent.h  procesy.c  procesy.h  rejestracja  rejestracja.c  rejestracja.h  semafor.c  test  test.c
